# WeightedBuddyMemoryAllocator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Report.docx  ReportAssignment5_RahulMadhavan.docx  charts.xlsx  helpers.c  helpers.h  makefile  makefile.txt  memComparisons.c  memoryAllocator.out  oneBin.c  oneBin.h  oneBinTester.h  spHeap.c  spHeap.h  spHeapTester.h  testMemory.c  testOfFire.txt  testOneBin.c  testOneBin.out  testSPHeap.c  testSPHeap.out  testSPHeap.txt  test_memory_allocator.txt
